[gd_scene load_steps=23 format=3 uid="uid://6adav1tkreiw"]

[ext_resource type="Script" uid="uid://dkb6r7gp535ty" path="res://Scripts/Components/Interactive/Ball.gd" id="1_kjo4a"]
[ext_resource type="Texture2D" uid="uid://dov10bfbneq2c" path="res://Assets/Images/BallSpritesheet.png" id="2_d3yjg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlft8"]
size = Vector2(128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j4pr"]
atlas = ExtResource("2_d3yjg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1vqw"]
atlas = ExtResource("2_d3yjg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ixbl"]
atlas = ExtResource("2_d3yjg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvcif"]
atlas = ExtResource("2_d3yjg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhx4k"]
atlas = ExtResource("2_d3yjg")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyrky"]
atlas = ExtResource("2_d3yjg")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_najd6"]
atlas = ExtResource("2_d3yjg")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixqbx"]
atlas = ExtResource("2_d3yjg")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aveb6"]
atlas = ExtResource("2_d3yjg")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8a7n"]
atlas = ExtResource("2_d3yjg")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcw1o"]
atlas = ExtResource("2_d3yjg")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb4rw"]
atlas = ExtResource("2_d3yjg")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_35ydb"]
atlas = ExtResource("2_d3yjg")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cv66"]
atlas = ExtResource("2_d3yjg")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ehwy"]
atlas = ExtResource("2_d3yjg")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkcbc"]
atlas = ExtResource("2_d3yjg")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vuug"]
atlas = ExtResource("2_d3yjg")
region = Rect2(384, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_l40hu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j4pr")
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1vqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ixbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvcif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhx4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyrky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_najd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixqbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aveb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8a7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcw1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb4rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35ydb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cv66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ehwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkcbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vuug")
}],
"loop": true,
"name": &"roll",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f46uy"]
size = Vector2(128, 128)

[node name="ZEBall" type="Area2D"]
scale = Vector2(0.125, 0.125)
script = ExtResource("1_kjo4a")

[node name="CollisionArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tlft8")

[node name="BallSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_l40hu")
animation = &"roll"

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 128)
collide_with_areas = true

[node name="EnvironmentCheck" type="Area2D" parent="."]

[node name="CheckArea" type="CollisionShape2D" parent="EnvironmentCheck"]
shape = SubResource("RectangleShape2D_f46uy")

[node name="MoveTimer" type="Timer" parent="."]
process_mode = 1
process_callback = 0
wait_time = 0.75
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="EnvironmentCheck" to="." method="_on_environment_check_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
